Refactoring Opening Hours tests wherein getRandomizedGroupEntitiesWithNameNotInList 'collect(toList())' replaced with 'toList()' to make code effective.